--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "auth:linkedin": "ts-node src/cli/authLinkedIn.ts",
     "collect:linkedin": "ts-node src/cli/collectLinkedIn.ts",
-    "apply:batch": "ts-node src/cli/applyBatch_windows.ts"
+    "apply:batch": "ts-node src/cli/applyBatch_windows.ts",
+    "apply:batch:mac": "ts-node src/cli/applyBatch_mac.ts"
   },
   "keywords": [],
   "author": "",
