--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "auth:linkedin": "ts-node src/cli/authLinkedIn.ts",
     "collect:linkedin": "ts-node src/cli/collectLinkedIn.ts",
     "apply:batch": "ts-node src/cli/applyBatch_windows.ts",
-    "apply:batch:mac": "ts-node src/cli/applyBatch_mac.ts"
+    "apply:batch:mac": "ts-node src/cli/applyBatch_mac.ts",
+    "frontend:jobs": "npm run collect:linkedin -- --count=20 --url 'https://www.linkedin.com/jobs/search/?currentJobId=4364201648&distance=25.0&f_E=3%2C4&f_F=it%2Ceng&f_JT=F&f_T=9%2C39%2C25201%2C3172%2C1176&f_TPR=r86400&geoId=103644278&keywords=Frontend%20Engineer%20JavaScript%20NOT%20(%22Easy%20Apply%22%20OR%20%22Easy%20Apply%20only%22%20OR%20%22LinkedIn%20Easy%20Apply%22%20OR%20%226%2B%20years%22%20OR%20%227%2B%20years%22%20OR%20%228%2B%20years%22%20OR%20%2210%2B%20years%22)&origin=JOB_SEARCH_PAGE_JOB_FILTER&refresh=true&sortBy=DD'",
+    "software:jobs": "npm run collect:linkedin -- --count=20 --url 'https://www.linkedin.com/jobs/search/?currentJobId=4355082715&distance=25.0&f_E=3%2C4&f_F=it%2Ceng&f_JT=F&f_T=9%2C39%2C25201%2C3172%2C1176&f_TPR=r86400&geoId=103644278&keywords=Software%20Engineer%20JavaScript%20NOT%20(%22Easy%20Apply%22%20OR%20%22Easy%20Apply%20only%22%20OR%20%22LinkedIn%20Easy%20Apply%22%20OR%20%226%2B%20years%22%20OR%20%227%2B%20years%22%20OR%20%228%2B%20years%22%20OR%20%2210%2B%20years%22)&origin=JOB_SEARCH_PAGE_SEARCH_BUTTON&refresh=true&sortBy=DD'",
+    "general:jobs": "npm run collect:linkedin -- --count=20 --url 'https://www.linkedin.com/jobs/'",
+    "fullstack:jobs": "npm run collect:linkedin -- --count=20 --url 'https://www.linkedin.com/jobs/search/?currentJobId=4360192483&distance=25.0&f_E=3%2C4&f_F=it%2Ceng&f_JT=F&f_T=9%2C39%2C25201%2C3172%2C1176&f_TPR=r86400&geoId=103644278&keywords=Full%20Stack%20Engineer%20NOT%20(%22Easy%20Apply%22%20OR%20%22Easy%20Apply%20only%22%20OR%20%22LinkedIn%20Easy%20Apply%22%20OR%20%226%2B%20years%22%20OR%20%227%2B%20years%22%20OR%20%228%2B%20years%22%20OR%20%2210%2B%20years%22)&origin=JOBS_HOME_KEYWORD_HISTORY'"
   },
   "keywords": [],
   "author": "",
